ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junk-food-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8300
          - path: /kitchen
            pathType: Prefix
            backend:
              service:
                name: kitchen-service
                port:
                  number: 8200
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8100
