no-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junk-food-ingress-no-auth
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /order/health
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8300
          - path: /kitchen/healt
            pathType: Prefix
            backend:
              service:
                name: kitchen-service
                port:
                  number: 8200
          - path: /notification/health
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8100
          - path: /user/health
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
